<resources>
    <string name="app_name">Imposters</string>
    <string name="app_name_start">Im</string>
    <string name="app_name_end">posters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="username_or_email">username or email</string>
    <string name="invalid_username_or_email">invalid username or email</string>
    <string name="username_or_email_required">username or email required</string>
    <string name="username">username</string>
    <string name="invalid_username">Unavailable username</string>
    <string name="invalid_email">Unavailable email</string>
    <string name="username_required">username required</string>
    <string name="email">email</string>
    <string name="email_required">email required</string>
    <string name="email_hint">john@mail.com</string>
    <string name="password">password</string>
    <string name="password_required">password required</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_mismatch">password mismatch</string>
    <string name="name">name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
</resources>