<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ecothon.auth.RegisterFragment">


    <LinearLayout
        android:id="@+id/linearLayoutName"
        style="@style/InputTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintWidth_percent=".8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_name_person" />

        <EditText
            android:background="@android:color/transparent"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:hint="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUsername"
        style="@style/InputTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutName"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_username" />

        <EditText
            android:background="@android:color/transparent"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:hint="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        style="@style/InputTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutUsername"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mail_outline" />

        <EditText
            android:background="@android:color/transparent"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:hint="@string/email" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        style="@style/InputTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        app:layout_goneMarginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password" />

        <EditText
            android:background="@android:color/transparent"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:hint="@string/password" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutConfirmPassword"
        style="@style/InputTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password" />

        <EditText
            android:background="@android:color/transparent"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:hint="@string/confirm_password" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>